add terminal settings

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -17,5 +17,11 @@
     "mode": "system",
     "light": "One Light",
     "dark": "One Dark"
+  },
+  "autosave": "on_focus_change",
+  "terminal": {
+    "shell": {
+      "program": "/opt/homebrew/bin/nu"
+    }
   }
 }
